[project]
name = "comfyui-gelbooru"
description = "Get random images from gelbooru or rule34."
version = "1.0.0"
license = "LICENSE"

[project.urls]
Repository = "https://github.com/1mckw/Comfyui-Gelbooru"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "mckw"
DisplayName = "Comfyui-Gelbooru"
Icon = ""
